feat: add rename department feature
