# back/src/main/kotlin/org/sejapoe/videomanager/dto/department/RenameDepartmentReq.kt
@@ -1,0 +1,8 @@
+package org.sejapoe.videomanager.dto.department
+
+import jakarta.validation.constraints.NotBlank
+
+data class RenameDepartmentReq(
+    val id: Long,
+    @NotBlank val name: String
+)
